# CardStacks

./: .gitignore  Documentation.md  PythonCards.py  README.md  main.py  pyproject.toml  setup.py  tests.py
.github/workflows/: python-package.yml  python-package2.yml
CardStacks/: __init__.py
src/: CardStacks.py  PythonCards.py
